...
            android:text="@string/enter_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtEnter"
        android:id="@+id/searchTrainFrom"
        android:hint="Pickup"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchTrainTo"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/searchTrainFrom"
        android:hint="Destination"/>

        <Button
            android:id="@+id/search"
...
