...
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:elevation="20dp"
    android:layout_margin="10dp"

    app:cardCornerRadius="10dp">

    <RelativeLayout
...
            android:gravity="center"
            android:textSize="15sp"
            android:text="To"
            android:textColor="@color/grey" />

        <ImageView
            android:id="@+id/imgFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
...
